# stream-tool

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml
StreamTool/: pyproject.toml
StreamTool/streamtool/: __init__.py  _button.py  _core.py  _create_obs_websocket_manager.py  _create_website.py  _page.py  _website.py  builtin_obs_actions.py
StreamTool/streamtool/resources/html_creation_files/standard_files/: html_file_part1.txt  html_file_part3.txt
StreamTool/streamtool/resources/templates/: page2.html  page3.html
docs/: requirements.txt
docs/source/: advanced_use.rst  api.html  api.rst  conf.py  index.rst  installing.rst
stream_tool/: Websockets_Auth.py  __init__.py  _button.py  _core.py  _create_obs_websocket_manager.py  _create_website.py  _data.py  _formatting_and_converting.py  _generators.py  _obs_websockets_manager.py  _page.py  _website.py  builtin_obs_actions.py  exceptions.py  settings_objects.py
stream_tool/resources/templates/: 404.html  page_template.html
streamtool/: Websockets_Auth.py  _core.py  _create_website.py  _obs_websockets_manager.py  _website.py
streamtool/resources/templates/: page_template.html
tests/: unit_test.py
tests/html_test_samples/: blank_page.html  button_function.html  button_link.html  color1.html  color2.html
