[tool.poetry]
name = "stream-tool"
version = "0.1.0"
description = "a simple tool for making macros"
authors = ["skylerficklin <skylerficklin@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pyskyler/stream-tool"
documentation = "https://stream-tool.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.10"
obs-websocket-py = "^1.0"
Flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
